@@ -6933,7 +6933,7 @@ HTTP request information
 
 
 
-*`http.request.header`*::
+*`http.request.headers`*::
 +
 --
 type: object
@@ -6970,7 +6970,7 @@ HTTP response information
 
 
 
-*`http.response.header`*::
+*`http.response.headers`*::
 +
 --
 type: object
